# dreaditor

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: create_release.yml
src/dreaditor/: __init__.py  __main__.py  actor.py  actor_reference.py  config.py  constants.py  entity_list_tree.py  main_window.py  rom_manager.py  utils.py
src/dreaditor/data/qt-stylesheets/: main-window.txt
src/dreaditor/painters/: base_painter.py  collision.py  custom_painters.py  logicpath.py  logicshape.py  positionalsound.py  worldgraph.py
src/dreaditor/widgets/: actor_data_tree.py  actor_data_tree_item.py  actor_list_tree.py  collision_camera_item.py  custom_painters.py  entity_list_tree.py  entity_list_tree_item.py  map_geometry.py  scenario_actor_dot.py  scenario_scene.py  scenario_viewer.py  subarea_tree_item.py  subareas_list_tree.py
tools/: create_release.py
