[build-system]
requires = [
  "importlib_metadata>=7.0",
  "setuptools>=61",
  "setuptools_scm>=8.1.0",
  "wheel>=0.42.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "dreaditor"
authors = [
  {name = "hyperbola0"}
]
dependencies = [
  "mercury-engine-data-structures>=0.33.0",
  "PySide6>=6.8.0.2",
  "pre-commit>=4.0.1",
  "pyinstaller>=6.11.0",
]
requires-python = ">= 3.11"
description = "A PyQt5-based Metroid Dread data visualizer"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.11",
  "Topic :: Games/Entertainment"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0.1",
  "pyinstaller>=6.11.0",
]

[tool.setuptools.packages.find]
where=["src"]
include=["dreaditor*"]

[tool.setuptools.package-data]
dreaditor = ["data*"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "src/dreaditor/version.py"

[project.urls]
Repository = "https://github.com/steven11sjf/dreaditor"

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "C90", "I", "UP", "C4",
    "RSE",
    "TCH",
    # "PTH",
    "COM818", "COM819",
    "ISC",
    "PIE",
    # "PT",

    "PLC",
    "PLC0208",  # iterating over set is also not deterministic, so we shouldn't do that!

    "PLE",
    "PLR0402", "PLR1711", "PLR1722", "PLR0206", "PLR0133", "PLR0124",
    "PLW",
    "SIM101",
]
extend-ignore = [
    "ISC001",  # may cause conflicts with formatter
    "PLW2901",  # `for` loop variable `key` overwritten by assignment target
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 25.
# Defaults to 10, but we're being very flexible right now
max-complexity = 25
